WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238743
[Apple Pay] buttons should be localized based on the system if not specified by the HTML
https://bugs.webkit.org/show_bug.cgi?id=238743
Summary
[Apple Pay] buttons should be localized based on the system if not specified ...
Devin Rousso
Reported
2022-04-04 10:06:21 PDT
.
Attachments
[fast-cq] Patch
(2.70 KB, patch)
2022-04-04 10:08 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(1.99 KB, patch)
2022-04-04 10:09 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-04-04 10:06:39 PDT
<
rdar://problem/89592004
>
Devin Rousso
Comment 2
2022-04-04 10:08:23 PDT
Created
attachment 456582
[details]
[fast-cq] Patch
Devin Rousso
Comment 3
2022-04-04 10:09:06 PDT
Created
attachment 456583
[details]
Patch
EWS
Comment 4
2022-04-04 12:49:29 PDT
Committed
r292312
(
249205@main
): <
https://commits.webkit.org/249205@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456583
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug