[Apple Pay] buttons should be localized based on the system if not specified by the HTML https://bugs.webkit.org/show_bug.cgi?id=238743 <rdar://problem/89592004>

Reviewed by Wenson Hsieh.

* rendering/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::paintApplePayButton):

Canonical link: https://commits.webkit.org/249205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292312 268f45cc-cd09-0410-ab3c-d52691b4dbfc